@@ -786,9 +786,10 @@
     <branch id="HEAD"/>
   </module>
   <module id="gnome-system-monitor">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnome-system-tools">
     <defaults>
