@@ -395,7 +395,7 @@
       <module id="gnome-power-manager" branch="gnome-2-18"/>
       <module id="gnome-screensaver"/>
       <module id="gnome-session"/>
-      <module id="gnome-system-monitor"/>
+      <module id="gnome-system-monitor" branch="gnome-2-18"/>
       <module id="gnome-system-tools"/>
       <module id="gnome-terminal"/>
       <module id="gnome-themes"/>
