@@ -1,3 +1,8 @@
+2007-04-09  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branched gnome-system-monitor for 2.18.
+
 2007-04-02  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
